<?php

namespace src;

class Bluray extends Media
{
private string $titre;
private string $realisateur;
private string $duree;
private int $anneeSortie;
}