<?php

namespace src;

class Magazine
{
private string $titre;
private int $numero;
private string $datePublication;
}