<?php

namespace src;

abstract class Media
{
protected string $nomMedia;
protected string $dureeEmprunt;


}